<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Media</string>
    <string name="action_settings">Settings</string>
    <string name="title_mainactivity">Media</string>
    <string name="audio_tab">Audio</string>
    <string name="video_tab">Video</string>
    <string name="chronometer">Chronometer</string>
    <string name="recordBtnDesc">Record</string>
    <string name="playBtnDesc">Play</string>
    <string name="deleteBtnDesc">Delete</string>
    <string name="shareBtnDesc">Share</string>
    <string name="title_activity_audio_player">Audio Player</string>
    <string name="audio_playlist">Audio Playlist</string>
    <string name="video_playlist">Video Playlist</string>
    <string name="audio_recorder">Audio Recorder</string>
    <string name="video_recorder">Video Recorder</string>
    <string name="wifidirect">WiFi P2P</string>
    <string name="title_activity_audio_playlist">Audio Playlist</string>
    <string name="audio_save_message">Audio file saved.</string>
    <string name="title_activity_video_playlist">Video Playlist</string>
    <string name="title_activity_video_player">Video Player</string>
    <string name="msg_empty">Playlist is empty!</string>
    <string name="hello_world">Hello world!</string>
    <string name="play_context_menu">Play</string>
    <string name="delete_context_menu">Delete</string>
    <string name="share_context_menu">Share</string>
    <string name="title_activity_wifidirect_activity">WiFi P2P</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="send_button">Send</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">Click Send button to send the file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>

</resources>
