<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
     android:background="#000000" >

     <LinearLayout
        android:id="@+id/linearlayout_top"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:gravity="center" 
        android:background="@drawable/customborder" > 
        
        <TextView
	        android:id="@+id/recorder"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="17sp" 
	        android:textStyle="bold"     
	        android:text="@string/video_recorder" />
         
    	<ImageButton
	        android:id="@+id/recordBtn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:contentDescription="@string/recordBtnDesc"
	        android:src="@drawable/record" 
	        android:background="@drawable/customborder_btn" />
    	
    </LinearLayout>

    <TextView
        android:id="@+id/save_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout_top"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="15sp" 
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:id="@+id/linearlayout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/save_notification"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        android:background="@drawable/customborder"
        android:gravity="center" 
        android:visibility="gone" >

        
        <LinearLayout
	        android:layout_height="wrap_content"
		 	android:layout_width="0dp"
		    android:layout_weight="1"
		    android:gravity="center" >
		  
	        <ImageButton
	            android:id="@+id/playBtn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"        
	            android:contentDescription="@string/playBtnDesc"
	            android:src="@drawable/play" 
	            android:background="@drawable/customborder_btn" />
			
		</LinearLayout>

        <LinearLayout
	        android:layout_height="wrap_content"
		 	android:layout_width="0dp"
		    android:layout_weight="1"
		    android:gravity="center" >
		    
	        <ImageButton
	            android:id="@+id/deleteBtn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" 
	            android:contentDescription="@string/deleteBtnDesc"
	            android:src="@drawable/delete" 
	            android:background="@drawable/customborder_btn" />
	        
        </LinearLayout>
        
        <LinearLayout
	        android:layout_height="wrap_content"
		 	android:layout_width="0dp"
		    android:layout_weight="1"
		    android:gravity="center" >
	        
	        <ImageButton
	            android:id="@+id/shareBtn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/customborder_btn"
	            android:contentDescription="@string/shareBtnDesc"
	            android:src="@drawable/share" />
	        
        </LinearLayout>
        
    </LinearLayout>
    
    
</RelativeLayout> 